--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,12 @@
     --body-color: #918ca4;
 }
 
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -17,7 +23,9 @@ body {
     color: var(--body-color);
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     color: var(--headings-color);
     margin-bottom: 1rem;
 }
@@ -152,11 +160,76 @@ a {
 }
 
 .icon-container {
+    align-items: center;
     background: #f3f9fa;
-    width: 64px;
-    height: 64px;
     border-radius: 100%;
     display: inline-flex;
+    height: 64px;
     justify-content: center;
-    align-items: center;
+    width: 64px;
+}
+
+.btn {
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin: 1rem 0;
+    padding: 2rem 3rem;
+    text-align: center;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+
+.btn--primary {
+    background: var(--primary-color);
+    color: white;
+}
+
+.btn--primary:hover {
+    background: #3a8ffd;
+    color: white;
+}
+
+.btn--secondary {
+    background: var(--secondary-color);
+    color: white;
+}
+
+.btn--secondary:hover {
+    background: #00c8eb;
+    color: white;
+}
+
+.btn--accent {
+    background: var(--accent-color);
+    color: white;
+}
+
+.btn--accent:hover {
+    background: #ec3000;
+    color: white;
+}
+
+.btn--outline {
+    background: white;
+    color: var(--headings-color);
+    border: 2px solid var(--headings-color);
+}
+
+.btn--outline:hover {
+    background: var(--headings-color);
+    color: white;
+}
+
+.btn--block {
+    width: 100%;
+    display: inline-block;
+}
+
+@media screen and (min-width: 1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
 }
