--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
     --accent-color: #ff3400;
     --headings-color: #1b0760;
     --body-color: #918ca4;
+    --border-color: #ccc;
+    --border-radius: 30px;
 }
 
 *,
@@ -235,8 +237,8 @@ a {
 }
 
 .input {
-    border-radius: 30px;
-    border: 1px solid #ccc;
+    border-radius: var(--border-radius);
+    border: 1px solid var(--border-color);
     color: var(--headings-color);
     font-size: 2rem;
     outline: 0;
@@ -245,6 +247,22 @@ a {
 
 ::placeholder {
     color: #cdcbd7;
+}
+
+.input-group {
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius);
+    display: flex;
+}
+
+.input-group .input {
+    border: 0;
+    flex-grow: 1;
+    padding: 1.5rem 1rem;
+}
+
+.input-group .btn {
+    margin: 4px;
 }
 
 @media screen and (min-width: 1024px) {
