--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --accent-color: #ff3400;
     --headings-color: #1b0760;
     --body-color: #918ca4;
+    --body-darker-color: #5c5577;
     --border-color: #ccc;
     --border-radius: 30px;
 }
@@ -371,4 +372,52 @@ a {
 
 .media__image {
     margin-top: 1rem;
+}
+
+.quote {
+    color: var(--body-darker-color);
+    font-size: 3rem;
+    font-style: italic;
+    line-height: 1.3;
+}
+
+.quote__text::before {
+    content: open-quote;
+}
+
+.quote__text::after {
+    content: close-quote;
+}
+
+.quote__auther {
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+
+.quote__organization {
+    color: var(--headings-color);
+    font-size: 2rem;
+    font-style: normal;
+    opacity: 0.4;
+}
+
+.quote__line {
+    bottom: 10px;
+    position: relative;
+}
+
+@media screen and (min-width: 1024px) {
+    .quote {
+        font-size: 2rem;
+    }
+
+    .quote__auther {
+        font-size: 2.4rem;
+    }
+
+    .quote__organization {
+        font-size: 1.6rem;
+    }
 }
